feat: X (Twitter) OAuth 2.0 entegrasyonu
✨ Yeni özellikler:
- X OAuth 2.0 Authorization Code Flow with PKCE
- Güvenli state parametresi (CSRF koruması)
- User modelinde X alanları (x_id, x_username, x_name, x_profile_image_url)
- X kullanıcı bilgilerini otomatik çekme ve güncelleme
- UI'da X ile giriş butonu

🔧 Teknik detaylar:
- XAuthController ile custom OAuth implementasyonu
- XOauth module ile OAuth konfigürasyonu
- dotenv-rails ile güvenli credentials yönetimi
- Password reset e-posta template düzeltmeleri

📦 Yeni gem'ler:
- oauth2: OAuth 2.0 client
- httparty: HTTP istekleri
- dotenv-rails: Environment variables

--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -1,8 +1,8 @@
-Hi <%= params[:user].email %>
+Hi <%= params[:user].email %>,
 
 Someone has requested a link to change your password. You can do this through the link below.
 
-<%= link_to "Change my password", password_reset_edit_url(token: @token) %>
+<%= link_to "Change my password", password_reset_edit_url(token: @token, host: 'localhost:3000') %>
 
 If you didn't request this, please ignore this email.
 
