--- a/app/views/password_mailer/reset.text.erb
+++ b/app/views/password_mailer/reset.text.erb
@@ -2,7 +2,7 @@ Hi <%= params[:user].email %>,
 
 Someone has requested a link to change your password. You can do this through the link below.
 
-<%= password_reset_edit_url(token: @token) %>
+<%= password_reset_edit_url(token: @token, host: 'localhost:3000') %>
 
 If you didn't request this, please ignore this email.
 
